--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -227,7 +227,7 @@
         }
 
         function redirectToChallenges() {
-            window.location.href = '/challenges/current'; // Redirect to challenges page
+            window.location.href = '/challenges/all'; // Redirect to challenges page
         }
 
         // Fetch user details on page load
